vendor/fixed-macro/tests/compile-fail/invalid-type-03.stderr
error: invalid fixed type: invalid number of integer bits
 --> $DIR/invalid-type-03.rs:2:32
  |
2 |     fixed_macro::fixed!(-1.23: IabF16);
  |                                ^^^^^^
